--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -5,4 +5,9 @@ $bg-secondary: rgb(49, 49, 49);
 $text-primary: white;
 $text-secondary: rgb(173, 173, 173);
 
+$lightShadow: rgba(255, 255, 255, 0.3);
+$darkShadow: rgba(0, 0, 0, .8);
+$textShadow: rgba(0, 0, 0, .2);
+
 $gold: yellow;
+$red: red;
