--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -1,3 +1,6 @@
+// Google fonts
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;700&display=swap');
+
 // RESET
 * {
     box-sizing: border-box;
