collection dynamic render

--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -12,7 +12,6 @@
 .l-row {
     display: flex;
     flex-direction: row;
-
 }
 .l-alignCenter {
     align-items: center;
@@ -20,3 +19,8 @@
 .l-spaceBetween {
     justify-content: space-between;
 }
+
+// COMMON COMPONENTS
+.c-star {
+    color: $gold;
+  }
