--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -20,12 +20,20 @@
     justify-content: space-between;
 }
 
-.l-grid-col2 {
+.l-grid--col2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+}
+.l-col--gap {
+    column-gap: 3rem;
 }
 
 // COMMON COMPONENTS
 .c-star {
-    color: $gold;
+    color: $text-primary;
+    margin-right: .25rem;
   }
+
+.h-text--primary {
+    color: $text-primary;
+}
